--- a/environment.yml
+++ b/environment.yml
@@ -97,6 +97,7 @@ dependencies:
   - tbb=2021.8.0=h59b6b97_0
   - tk=8.6.14=h0416ee5_0
   - tornado=6.4.2=py313ha7868ed_0
+  - tqdm=4.63.0=pyhd3eb1b0_0
   - traitlets=5.14.3=pyhd8ed1ab_1
   - typing_extensions=4.12.2=pyha770c72_1
   - tzdata=2024b=h04d1e81_0
